[package]
name = "sendai"
version = "0.1.0"
authors = ["Thomas Zwarts <thomaszwarts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3.2", features = ["full"] }
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
serde_json = "1.0"
serde = "1.0.117"
log = "0.4.11"
simplelog = "0.8.0"
