[package]
name = "sendai"
version = "0.1.0"
authors = ["Thomas Zwarts <thomaszwarts@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = { git = "https://github.com/Thomas-X/binance-rs.git" }
serde_json = "1.0"
serde = "1.0.117"
log = "0.4.11"
simplelog = "0.8.0"
rusqlite = "0.24.1"
ta-lib-wrapper = "0.2.0"
